Hardcoded configuration to launch developer server